# ece-world-paris-ing1-2022-2023-td8-equipe-20-ou-rien

./: CMakeLists.txt  fonction_allegro.h  main.c
conf/: guns.conf  map.conf  opps.conf
jadou/: header.h  main.c  sous.c
moleGame/includes/: header.h  struct.h
moleGame/src/: free.c  game.c  handleError.c  main.c  sky.c  weapon.c
myFps/: CMakeLists.txt
myFps/conf/: map.conf  opps.conf
myFps/includes/: header.h  struct.h
myFps/src/: display.c  game.c  gun.c  main.c  opps.c  pauseMenu.c  player.c  raycasting.c
presentation/: presentation.md
robin/: CMakeLists.txt  fonction_affichage.c  fonction_affichage.h  main.c
save/: bestscorefps  icespice  newsave  save  save2  street  test  test2  testgab  uuu9
src/: fonction_allegro.c
src/.c/: Marp.c  display.c  fonction game fighter.c  fonction game snake.c  fonction_allegro.c  fonction_ballon.c  fonction_game_fighter.c  fonction_game_snake.c  fonction_labyrith.c  fonction_project.c  fonction_riviere.c  fonction_utile.c  free.c  game.c  gameMole.c  gun.c  handleError.c  loadGame.c  main.c  opps.c  pauseMenu.c  player.c  quickSort.c  raycasting.c  save.c  sous.c
src/.h/: fonction game snake.h  fonction_allegro.h  fonction_game_fighter.h  fonction_game_snake.h  fonction_project.h  fonction_riviere.h  fonction_utile.h  header.h  headerJade.h  moleHeader.h
tema la taille du rat/conf/: guns.conf  opps.conf
tema la taille du rat/includes/: header.h  struct.h
tema la taille du rat/src/: display.c  free.c  game.c  gun.c  loadMap.c  main.c  opps.c  player.c  raycasting.c
